manifests/todo-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  strategy: {}
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - image: eu.gcr.io/reload-oliver-onboarding/todo-app:"${RELEASE_TAG}"
        name: todo-app
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
        resources: {}
