manifests/todo-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app
  name: todo-app-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: todo-app
  type: LoadBalancer
