manifests/todo-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-db
  name: todo-db-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: todo-db
